# SpacInvaders

./: .gitignore  CMakeLists.txt  State.cpp  State.h  main.cpp  main.h  shaderManager.cpp  shaderManager.h
shaders/: fontF.glsl  fontV.glsl  mainF.glsl  mainV.glsl
